replace gnutls-openssl with nettle
  * require nettle-dev instead of gnutls-openssl
      because gnutls-openssl is no longer supported on ArchLinux
  * upgrade fweelin version to 0.6.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+
+
+IN PROGRESS v0.6.2-arch
+
+            * FreeWheeling now requires nettle instead of gnutls-openssl
+              because gnutls-openssl is no longer supported on ArchLinux
+
+
 2016-10-31 v0.6.1
             * new repo
               sadly, JP has been incommunicado for some time 
